feat: add news page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
-
+@plugin '@tailwindcss/typography';
 /* customized bg image */
 @theme {
   --background-image: url("/img/welcome.jpg");
