--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 @plugin '@tailwindcss/typography';
-@import "./modal.css";
+@import './modal.css';
 
 @theme {
-  --background-image: url("/img/welcome.jpg");
+  --background-image: url('/img/welcome.jpg');
 }
 
 .bg-welcome {
