--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,21 @@
   --background-image: url('/img/welcome.jpg');
 }
 
+@layer base {
+  :root {
+    --color-teal-50: #f3f5fc;
+    --color-teal-100: #e1e7f7;
+    --color-teal-200: #c3cff0;
+    --color-teal-300: #9db3e4;
+    --color-teal-400: #5c7ec1; /* 主色 */
+    --color-teal-500: #3d5aa9;
+    --color-teal-600: #2f4691;
+    --color-teal-700: #263975;
+    --color-teal-800: #1f2d5d;
+    --color-teal-900: #1a2447;
+  }
+}
+
 .bg-welcome {
   background-image: var(--background-image);
   background-size: cover;
